--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
-    "require": {
-        "mpdf/mpdf": "^8.0"
+  "require": {
+    "mpdf/mpdf": "^8.0",
+    "phpmailer/phpmailer": "^6.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Models\\":"models/"
     }
+  }
 }
